packages/GlobalSalesCore/main/default/objects/Opportunity/fields/CalculatedPriority__c.field-meta.xml
<CustomField>
    <fullName>CalculatedPriority__c</fullName>
    <formula>IF(
    OR(
        Account.GlobalAccountTier__c = &apos;Enterprise&apos;,
        Account.GlobalAccountTier__c = &apos;Strategic&apos;,
        Amount &gt; 100000
    ),
    &apos;High&apos;,
    IF(
        OR(
            SalesRegion__c = &apos;EMEA&apos;,
            SalesRegion__c = &apos;APAC&apos;
        ),
        &apos;Medium&apos;,
        &apos;Low&apos;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Priority</label>
    <type>Text</type>
</CustomField>